@@ -1,10 +1,11 @@
 Release History
 ***************
 
+
 1.1.4 (unreleased)
 ==================
 
-
+Add support to autogen configure files.
 
 1.1.3 (2008-06-03)
 ==================
